@@ -1,3 +1,8 @@
+2018-05-05  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (attr_callback): Handle DW_FORM_ref_sup4 and
+	DW_FORM_ref_sup8 as references.
+
 2018-04-24  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (print_debug_str_section): Take raw section data. Don't
